--- a/main.tex
+++ b/main.tex
@@ -918,7 +918,7 @@ Now one observes the Koide relation [22], where $\mu$ and $\tau$ are the muon an
 \end{equation}
 which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
 mass ratio at an epoch during which its measurement was false to 3 $\sigma$. With the above $\mu$ value, it
-gives $$\tau \approx 3477.441701$$
+gives $\tau \approx 3477.441701$, which obeys, to 0.1 ppm: $$e^{e^e}/a e^e \approx (F/137)^{3/2} (j/\mu\tau) (pH)^{1/4} p/p_0$$
 The above Koide constant $p_K \approx 1842.604994$ is close to $p$, but, more interesting, it connects with the  above Moonshine Monster dimension [23] $D = 196883$ of the Monster, to 48, 10, 13, 26 ppm:
 $$137/8 \approx p^2/D  \approx (p_K/2\pi)^{1/2} \approx 137^{1/\sqrt3} \approx p^{1/\sqrt7}$$
 Moreover $\tau$ correlates with the
