--- a/main.tex
+++ b/main.tex
@@ -914,9 +914,9 @@ This yields to a muon relative to electron mass ratio
 \end{equation} within its 20 ppb measurement range.
 Now one observes the Koide relation [22], where $\mu$ and $\tau$ are the muon and tau masses relative to electron mass:
 \begin{equation}
-(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
+(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K \approx 4\pi\sqrt{apH}
 \end{equation}
-which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
+(1 ppm), which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
 mass ratio at an epoch during which its measurement was false to 3 $\sigma$. With the above $\mu$ value, it
 gives $\tau \approx 3477.441701$, which obeys, to 0.1 ppm: $$e^{e^e}/a e^e \approx (F/137)^{3/2} (j/\mu\tau) (pH)^{1/4} p/p_0$$
 The above Koide constant $p_K \approx 1842.604994$ is close to $p$, but, more interesting, it connects with the  above Moonshine Monster dimension [23] $D = 196883$ of the Monster, to 48, 10, 13, 26 ppm:
