--- a/main.tex
+++ b/main.tex
@@ -914,7 +914,7 @@ This yields to a muon relative to electron mass ratio
 \end{equation} within its 20 ppb measurement range.
 Now one observes the Koide relation [22], where $\mu$ and $\tau$ are the muon and tau masses relative to electron mass:
 \begin{equation}
-(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K \approx 4\pi\sqrt{apH}
+(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K \approx 4\pi (apH)^{1/4}
 \end{equation}
 (1 ppm), which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
 mass ratio at an epoch during which its measurement was false to 3 $\sigma$. With the above $\mu$ value, it
