--- a/main.tex
+++ b/main.tex
@@ -1140,7 +1140,7 @@ the Holic Principle, which explains why normal space has 3 dimensions.
 \item 6/ The acceleration of expansion, which was predicted by the Eddington's \textit{invariant} cosmological constan $1/R^2$, is tied to a repulsive force proportional to distance, leading to \textit{exponential} recession. there is no need of the so-called 'dark energy'.
 \item 7/ The very existence of dark matter is proven, from the number of neutrons in the trivial fraction 3/10 of the visible Universe critical mass, which identifies with the very symmetric Eddington's number $136 \times 2^{256}$. The nature of dark matter would be simply an anti-phase matter-antimatter oscillation [3].  
 \item 8/ The introduction of the Topon in the Holographic Principle justifies at last the $10^{122}$ gap between vacuum energy and that of the visible Universe.
-\item 9/ The grandcosmos is huge but not infinte, in conformity with the Cosmological Computational Principle.
+\item 9/ The grandcosmos is huge but not infinite, in conformity with the Cosmological Computational Principle.
 
 In short, the rediscovered cosmos unifies the two main modern cosmologies in a rapid matter-
 antimatter oscillatory bounce. The Cosmos appear as \textit{simple, unique, permanent, computational,
