--- a/main.tex
+++ b/main.tex
@@ -918,12 +918,12 @@ Now one observes the Koide relation [22], where $\mu$ and $\tau$ are the muon an
 \end{equation}
 (1 ppm), which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
 mass ratio at an epoch during which its measurement was false to 3 $\sigma$. With the above $\mu$ value, it
-gives $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm: $e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$, resulting from the elimination of $137a$ in the following extension of the above relation definig $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Higgs ratio $s$:
+gives $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm: $e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$, resulting from the elimination of $(137a)$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Higgs ratio $s$:
 \begin{equation}
 F/137 = f \sqrt{s} =  \mu^2 \sqrt{pH}/137a \approx \sqrt{137a} (p/p_0) \tau /j
 \end{equation}
 (0.7 ppm). The above Koide constant $p_K \approx 1842.604994$ connects with the above Moonshine Monster dimension [23] $D = 196883$, to 48, 10, 13, 26 ppm:
-$$137/8 \approx p^2/D  \approx (p_K/2\pi)^{1/2} \approx 137^{1/\sqrt3} \approx p^{1/\sqrt7}$$, 
+$$137/8 \approx p^2/D  \approx (p_K/2\pi)^{1/2} \approx 137^{1/\sqrt3} \approx p^{1/\sqrt7}$$ 
 Moreover $\tau$ correlates with the
 term $1+1/\sqrt{a}$, central in quantum electrodynamics to 0.1 ppm:
 \begin{equation}
@@ -987,8 +987,8 @@ Bearing in mind that:
 m_{e} c^{2} f(\gamma\Gamma) \approx 125.175 GeV
 \end{equation}
 is compatible with the Higgs Boson energy, it is interesting to note the perfect match with the dimension index $k \approx \pi$, leading to $$\gamma\Gamma \approx 4\pi + 2$$
-The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich cycle. One obtains also :
-$$\Gamma \approx e^\pi + 2$$
+The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich cycle. One observes also, to 0.16 \% and 1.8 ppm:
+$$e^\pi \approx (\Gamma - 2)/d_e \approx a_w^{1/f}/d_e^2$$
 meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n approx \Gamma$.
 One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
 $$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}$$
