--- a/main.tex
+++ b/main.tex
@@ -987,8 +987,8 @@ Bearing in mind that:
 m_{e} c^{2} f(\gamma\Gamma) \approx 125.175 GeV
 \end{equation}
 is compatible with the Higgs Boson energy, it is interesting to note the perfect match with the dimension index $k \approx \pi$, leading to $$\gamma\Gamma \approx 4\pi + 2$$
-The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich cycle. One observes also, to 0.16 \% and 1.8 ppm:
-$$e^\pi \approx (\Gamma - 2)/d_e \approx a_w^{1/f}/d_e^2$$
+The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and $c$ times the Milankovich cycle. One observes also, to 0.16 \%, 1.8 ppm and 10 ppb:
+$$e^\pi \approx (\Gamma - 2)/d_e \approx a_w^{1/f}/d_e^2 \approx (16/ln2)d_e \beta p/p_0$$
 meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n approx \Gamma$.
 One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
 $$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}$$
