--- a/main.tex
+++ b/main.tex
@@ -1169,102 +1169,129 @@ Submitted on April 1st, 2019 / Accepted on April 6th, 2019
 
 \begin{thebibliography}{99}\footnotesize
 
-\bibitem{1} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
-Nature 278, 605-612 (1979). % Here is referred book
+\bibitem{1} Carr B.J. and Rees M.J., ``The anthropic principle and the
+structure of the physical world'', Nature 278, 605-612 (1979).
 
-\bibitem{2} Eddington A.S. The Fundamental Theory (Cambridge), 1946.
+\bibitem{2} Eddington A.S. The Fundamental Theory (Cambridge, 1946).
 
-\bibitem{3}  Sanchez F.M. \textit{Coherent Cosmology} Vixra.org,1601.0011. Sanchez F.M., Kotov V. and Bizouard C., \textit{Towards Coherent Cosmology}, Galilean Electrodynamics, special issue, winter 2013, pp 63-80.
-Sanchez F.M. \textit {A Coherent Resonant Cosmology Approach and its Implications in Microphysics and Biology}, Progress in Theoretical Chemistry and Physics 30, pp. 375-407.Springer (2017). DOI 10.1007/978-3-319-50255-7-2. % Here is referred book
+\bibitem{3} Sanchez F.M. ``Coherent Cosmology''. Vixra.org,1601.0011. Springer
+International Publishing AG. A. Tadjer et al. (eds.), Quantum Systems in
+Physics, Chemistry, and Biology, Progress in Theoretical Chemistry and Physics
+30 (2017), p. 375-407; DOI 10.1007/978-3-319-50255-7-23.
 
-\bibitem{4} Bonvin V. Holicow, New cosmograil time delays of HE 0435-1223, arXiv: 1607.01790v2
-(2016). % Here is referred book
+\bibitem{4} Bonvin V. ``Holicow, New cosmograil time delays of HE 0435-1223'',
+arXiv: 1607.01790v2 (2016).
 
-\bibitem{5} Sanchez F.M., V. A. Kotov and C. Bizouard C. Towards a synthesis of two cosmologies: the
-steady-state flickering Universe., \textit{Journal of Cosmology}, v.\, 17, 7225-7237 (2011). % Here is referred book
+\bibitem{5} Sanchez F.M., Kotov V.A. and Bizouard C. ``Towards a synthesis of
+two cosmologies: the steady-state flickering Universe''. J. Cosmology 17,
+7225-7237 (2011).
 
-\bibitem{6} Bousso R., “The Holographic Principle”, \textit{Review of Modern Physics}, v.\, 74, p.834 (2002).
+\bibitem{6} Bousso R. ``The Holographic Principle'', Review of Modern Physics
+74, 834 (2002).
 
-\bibitem{7} Duplantier B. Introduction à l'effet Casimir, Séminaire Poincar\'{e} 1 (2002), 41-54.. % Here is referred book
+\bibitem{7} Duplantier B. ``Introduction a l'effet Casimir''. Seminaire
+Poincare 1, 41-54 (2002).
 
-\bibitem{8} Damour T. The Entropy of Black Hole: a Primer. Séminaire Poincar\'{e} 2 (2003), 100 (89-115. % Here is referred book
+\bibitem{8} Damour T. ``The Entropy of Black Hole: a Primer''. Seminaire
+Poincare 2, 89-115 (2003).
 
-\bibitem{8} Kotov V. A. and Lyuty V. M., “The 160-min. Periodicity in the optical and X-ray observations of
-extragalactic objects.” Compt. Rend. Acad. Sci. Paris 310, Ser. II, 743-748 (1990). Fossat, E.,
-Boumier, P., Corbard, T., et al., 2017. Astron. Astrophys., 604, A40, 1; DOI: 10.1051/0004-
-6361/201730460. Grec, G., Fossat, E., 1979. Astron. Astrophys., 77, 351. Kotov, V.A., 2013.
-Izv. Krym. Astrofiz. Obs., 109(1), 232. Kotov, V.A., 2018. Earth Moon Planets, 122(1), 43;
-DOI:10.1007/s11038-018-9520-6. Sevin E., 1946. Compt. Rend. Acad. Sci. Paris, 222, 220.
-Kotov, V.A., 2018. Motion of the fast exoplanets. Astrophys. Space Sci. 363(3), 1-5; DOI:
-10.1007/s10509-018-3278-1. % Here is referred book
+\bibitem{9} Kotov V.A. and Lyuty V.M. ``The 160-min. periodicity in the optical
+and X-ray observations of extragalactic objects''. Compt. Rend. Acad. Sci.
+Paris 310, Ser. II, 743-748 (1990). Fossat E., Boumier P., Corbard T., et al.
+``Asymptotic $g$ modes: Evidence for a rapid rotation of the solar core''.
+Astron. Astrophys. 604, A40, 1-17 (2017); DOI: 10.1051/0004-6361/201730460.
+Grec G., Fossat E. ``Calculation of pseudo solar narrow band oscillations
+produced by atmospheric differential extinction''. Astron. Astrophys. 77,
+351-353 (1979). Kotov V.A. ``Evolution of the Sun and the Earth: the (un)known
+period 1.035 years''. Izv. Krym. Astrofiz. Obs. 109(1), 232-253 (2013).
+Kotov V.A. ``Fast spinning of planets''. Earth Moon Planets 122(1), 43-52
+(2018) (2018); DOI:10.1007/s11038-018-9520-6. Sevin, \'E. ``Sur la structure du
+syst\`eme solaire''. Compt. Rend. Acad. Sci. Paris. 222, 220-221 (1946).
+Kotov V.A. ``Motion of the fast exoplanets''. Astrophys. Space Sci. 363(3), 1-5
+(2018); DOI: 10.1007/s10509-018-3278-1.
 
-\bibitem{9} \textit{Review of Particle Physics}. Particle Data Group, Phys. Rev. D98, 030001 (2018)
+\bibitem{10} Tanabashi M., Hagiwara K., Hikasa K., et al. (Particle Data
+Group). ``The review of particle physics''. Phys. Rev. D, 98, 030001 (2018);
+{\it http://pdg.lbl.gov.}
 
-\bibitem{10} Quinn T, Speake C, Parks H, Davis R. 2014 The BIPM measurements of the Newtonian
-constant of gravitation, G. Phil.Trans. R. Soc. A372: 20140032. % Here is referred book
+\bibitem{11} Quinn T., Speake C., Parks H., Davis R., ``The BIPM measurements
+of the Newtonian constant of gravitation, G.'', Phil. Trans. R. Soc. A, 372,
+20140032 (2014); {\it http://dx.doi.org/10.1098/rsta.2014.0032}.
 
-\bibitem{11} Sanchez F.M., “Towards the grand unified Holic Theory”. \textit{Current Issues in Cosmology}. Ed. J.-C.
-Pecker and J. Narlikar. Cambridge Univ. Press, 257-260 (2006).
+\bibitem{12} Sanchez F.M. ``Towards the grand unified Holic Theory''. Current
+Issues in Cosmology. Ed. J.-C. Pecker and J. Narlikar. Cambridge Univ. Press,
+2006; p. 257-260.
 
-\bibitem{12} Kotov V. A. and Sanchez F.M., Solar 22 years cycle, \textit{Astrophysics and Space Science}, v.\, 362,
-Issue 1, article id.6, 6 pp. (2017).
+\bibitem{13} Kotov V.A. and Sanchez F.M. ``Solar 22 years cycle'', Astrophys.
+Space Sci. 362(6), 1-6 (2017); DOI: 10.1007/s10509-016-2985-8.
 
-\bibitem{13} Tifft, W. G. (2006). "Redshift periodicities, The Galaxy-Quasar Connection". \textit{Astrophysics and
-Space Science} v.\,285 (2):429.
+\bibitem{14} Tifft W.G. ``Redshift periodicities. The galaxy-quasar
+connection''. Astrophys. Space Sci. 285(2):429 (2006).
 
-\bibitem{14} Arp H., The origin of Companion Galaxies. \textit{Astrophysical Journal}, 496, 661-669 (1998).
+\bibitem{15} Arp H. ``The origin of companion galaxies''. Astrophys. J. 496,
+661-669 (1998).
 
-\bibitem{15} Nieto M., and Anderson J., Using Early Data to Illuminate the Pioneer Anomaly, Pi Class.
-Quant. Grav. 22 (2005) 5345-5354. arXiv:ge-qc/0507052.
+\bibitem{16} Nieto M. and Anderson J. ``Using early data to illuminate the
+Pioneer anomaly''. Pi Class. Quant. Grav. 22, 5345-5354 (2005);
+arXiv:ge-qc/0507052.
 
-\bibitem{16} Borcherds, Richard, Monstruous Moonshine and Monstruous Lie Superalgebras. Invent.
-Math., 109: 405–444, (1992).
+\bibitem{17} Borcherds and Richard. ``Monstruous Moonshine and Monstruous Lie
+Superalgebras''. Invent. Math. 109, 405-444 (1992).
 
-\bibitem{18} I. Bars, Gauge Duality, Conformal Symmetry, and Space-Time with Two Times, Phys. Rev. D
-58 (1998) hep-th/9803188.
+\bibitem{18} Bars I. ``Gauge Duality, Conformal Symmetry, and Space-Time with
+Two Times''. Phys. Rev. D 58 (1998); hep-th/9803188, 
 
-\bibitem{19} Cartan H. Démonstration homologique des théorèmes de périodicité de Bott, I. Séminaire
-Henri Cartan, Tome 12 (1959-1960) no. 2, Exposé no. 16, p. 1-16.
+\bibitem{19} Cartan H. ``Demonstration homologique des theoremes de periodicite
+de Bott''. I. Seminaire Henri Cartan, Tome 12 (1959-1960) no. 2, Expose no. 16,
+p. 1-16.  
 
-\bibitem{20} Preskill, John. Do Black Holes Destroy Information? International Symposium on Black Holes,
-Membranes, Wormholes, and Superstrings. arXiv:hep-th/9209058. (1992).
+\bibitem{20} Preskill J. ``Do black holes destroy information?'' Internat.
+Symp. on Black Holes, Membranes, Wormholes, and Superstrings (1992);
+arXiv:hep-th/9209058.
 
-\bibitem{21} Nikolic, Hrvoje. "Resolving the black-hole information paradox by treating time on an equal
-footing with space". Physics Letters B. 678 (2): 218–221. arXiv:0905.0538. (2009)
+\bibitem{21} Nikolic, Hrvoje. ``Resolving the black-hole information paradox by
+treating time on an equal footing with space''. Phys. Lett. B. 678(2):
+218-221 (2009); arXiv:0905.0538.
 
-\bibitem{22} Koide Y., Fermion-Boson Two-Body Model of Quarks and Leptons and Cabibbo Mixing Lett.
-Nuovo Cimento 34, 201 (1982)
+\bibitem{22} Atiyah M. ``The fine-structure constant''. 4th Heidelberg Laureate
+Forum conference (2018); blog.sciencenet.cn/home.php?mod=attachment\&id=256716.
 
-\bibitem{23} J. H. Conway and S. P. Norton, Monstrous Moonshine, Bull. London Math. Soc. 11 (1979), no.
-3, 308–339
+\bibitem{23} Conway J.H. and Norton S.P. ``Monstrous Moonshine''. Bull. London
+Math. Soc. 11(3) 308-339 (1979)
 
-\bibitem{24} Atiyah M. The fine-structure constant, 4th Heidelberg Laureate Forum conference (2018).
-https://www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/
+\bibitem{24} Koide Y. ``Fermion-Boson two-body model of quarks and leptons and
+Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
 
-\bibitem{25} Polchinski J., String Theory, Vol 1, p. 22 (Cambridge University Press, 1998)
+\bibitem{25} Polchinski J. ``String Theory'', vol. 1, p. 22 (Cambridge
+University Press, 1998).
 
-\bibitem{26} R. Chauvin, Le Darwinisme ou la fin d'un mythe, ed. du Rocher, 1997
+\bibitem{26} Chauvin R. ``Le Darwinisme ou la fin d'un mythe'', ed. du Rocher
+(1997).
 
-\bibitem{27} Woit P. Not Even Wrong: The Failure of String Theory and the Search for Unity in Physical
-Law. Basic books, 2006
+\bibitem{27} Woit P. ``Not Even Wrong: The Failure of String Theory and the
+Search for Unity in Physical Law'' (Basic Books, 2006).
 
-\bibitem{28} Larin S.A, Quantum Chromodynamics with massive gluons. ArXiv:1304.8107, (2013)
+\bibitem{28} Larin S.A. ``Quantum chromodynamics with massive gluons''.
+ArXiv:1304.8107 (2013).
 
-\bibitem{29} Durham I.T. 2006, Sir Arthur Eddington and the Foundations of Modern Physics arXiv:quant-
-ph/0603146v1 p.111.
+\bibitem{29} Durham I.T. ``Sir Arthur Eddington and the Foundations of Modern
+Physics'' (2006), p. 111; arXiv:quant-ph/0603146v1.
 
-\bibitem{30} Widom A. Et al, Electromagnetic signals from Bacteria DNA, arXiv: 1104.311v2, 2012
+\bibitem{30} Widom A. et al. ``Electromagnetic signals from bacteria DNA''
+(2012); arXiv: 1104.311v2.
 
-\bibitem{31} Salingaros N., Some Remarks on the Algebra of Eddington's E Numbers. Foundations of
-Physics, June 1985, Volume 15, 6, pp 683–691
+\bibitem{31} Salingaros N. ``Some remarks on the algebra of Eddington's E
+Numbers''. Foundations of Physics 15 (6), 683-691 (1985).
 
-\bibitem{32} Weigel D., Veysseyre R and Carel C. Sur les symboles du groupe d'espace d'une wüstite de tri-
-incommensurabilité cubique est sur les groupes de Bravais de sa famlille cristalline dans
-l'espace euclidien à six dimensions. C.R. Acad. Sci. Paris, t. 305, Série II, p. 349-352 (1987)
+\bibitem{32} Weigel D., Veysseyre R. and Carel C. ``Sur les symboles du groupe
+d'espace d'une wustite de tri-incommensurabilite cubique est sur les groupes de
+Bravais de sa famlille cristalline dans l'espace euclidien a six dimensions''.
+Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349-352 (1987).
 
-\bibitem{33} Atiyah M., private communication (December 2018)
+\bibitem{33} Atiyah M. Private communication (December 2018).
 
 %\bibitem{34} Grosmann, M and Rebordão, José and Meyrueis, Patrick. Propagation Of Waves In Optical Systems: Reformulation Of Huyghens Principle For Aspheric Systems. Proceedings of SPIE - The International Society for Optical Engineering. DOI 10.1117/12.968010. 02.1985
+\end{thebibliography}
 
 \end{thebibliography}
 \vspace*{-6pt}
