--- a/main.tex
+++ b/main.tex
@@ -991,7 +991,7 @@ The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is char
 $$e^\pi \approx (\Gamma - 2)/d_e \approx a_w^{1/f}/d_e^2 \approx (16/ln2)d_e \beta p/p_0$$
 meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n \approx \Gamma$.
 One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
-$$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}\approx (a/137)^{1/2} F^{10/3\sqrta}$$
+$$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}\approx (a/137)^{1/2} F^{10/3\sqrt{a}}$$
 (1.8 ppm), confirming Atiyah's symmetry between $\pi$ and $a$, the role of the dimension 496, and the pertinence of the 20th power of $F$, corresponding to the 20 normal amino-acids.  
 
 \section {Discussion}
