--- a/main.tex
+++ b/main.tex
@@ -916,9 +916,9 @@ Now one observes the Koide relation [22], where $\mu$ and $\tau$ are the muon an
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K \approx 4\pi (apH)^{1/4}
 \end{equation}
-%%(1 ppm), which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
-%%mass ratio at an epoch during which its measurement was false to 3 $\sigma$. With the above $\mu$ value, it
-%%gives $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm: $e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  %%\sqrt{pH} (p/p_0)^2$, resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation %%defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Higgs ratio $s$:
+(1 ppm), which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
+mass ratio at an epoch during which its measurement was false to 3 $\sigma$. With the above $\mu$ value, it
+gives $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm: $e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$, resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Higgs ratio $s$:
 %%\begin{equation}
 %%F/137 = f \sqrt{s} =  \mu^2 \sqrt{pH}/r_m^2 \approx \r_m (p/p_0) \tau /j \approx a^{1/6}p_K \approx jp/50 
 %%\end{equation}
