--- a/main.tex
+++ b/main.tex
@@ -920,7 +920,7 @@ Now one observes the Koide relation [22], where $\mu$ and $\tau$ are the muon an
 mass ratio at an epoch during which its measurement was false to 3 $\sigma$. With the above $\mu$ value, it
 gives $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm: $e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$, resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Higgs ratio $s$:
 %%\begin{equation}
-$$F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/r_m^2 \approx \r_m (p/p_0) \tau /j \approx a^{1/6}p_K \approx jp/50 $$ 
+$$F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/a_m^2 \approx \a_m (p/p_0) \tau /j \approx a^{1/6}p_K \approx jp/50 $$ 
 %%\end{equation}
 (0.7 ppm, 0.3 \%, 0.1 \%). This shows that Cosmos uses the rationalisation 137/50 for $e$. The above Koide constant $p_K \approx 1842.604994$ connects with the above Moonshine Monster dimension [23] $D = 196883$, to 48, 10, 13, 26 ppm:
 $$137/8 \approx p^2/D  \approx (p_K/2\pi)^{1/2} \approx 137^{1/\sqrt3} \approx p^{1/\sqrt7}$$ 
