--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@ $^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, Franc
 \medskip
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
-The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, in conformity with the first thermodynamics principle, inverting the anthropic principle, and interpretating the physical dimensionless parameters as optimal calculation basis. The later are unified in the Topological Axis, which rehabilitates the string theory dimension series 4k+2, with emphasis on the values 26 (Universe) and 10 (Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor $10^{61}$, resolving the vacuum energy dilemma. An holographic scanning explains at last the Universe vastness, justifying the pertinence of large numbers, such as the Eddington's one, which is the number of neutrons in the trivial ratio 3/10 of the visible Universe, so justifying black matter existence. The galaxy recession and the massive black holes are both associated to the second thermodynamics principle. The supercycle period is given by the dimensional analysis, and linked to the holic dimension 30 and, throught the Monster group order, to the Kotov's absolute clock period. This confirms the matter-antimatter Oscillatory Bounce (frequency $10^{104}$~Hz), unifying the standard Single Bang cosmology with the Steady-State one, and the return to the Newton's absolute space-time, realized by the cosmic microwave Grandcosmos radiationn. The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 and the Atiyah's constant. It is predicted that Koide relation, massive gluons and composite d quark will deblock Particle Physics and that future telescopes will find mature galaxies at very large distances (instead of a dark space), ruining thus the standard evolutionary cosmology, ill-founded on the imperfect cosmological principle.
+The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, in conformity with the first thermodynamics principle, inverting the anthropic principle, and interpretating the physical dimensionless parameters as optimal calculation basis. The later are unified in the Topological Axis, which rehabilitates the string theory dimension series 4k+2, with emphasis on the values 26 (Universe) and 10 (Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor $10^{61}$, resolving the vacuum energy dilemma. An holographic scanning explains at last the Universe vastness, justifying the pertinence of large numbers, such as the Eddington's one, which is the number of neutrons in the trivial ratio 3/10 of the visible Universe, so justifying black matter existence. The galaxy recession and the massive black holes are both associated to the second thermodynamics principle. The supercycle period is given by the dimensional analysis, and linked to the holic dimension 30 and, throught the Monster group order, to the Kotov's absolute clock period. This confirms the matter-antimatter Oscillatory Bounce (frequency $10^{104}$~Hz), unifying the standard Single Bang cosmology with the Steady-State one, and the return to the Newton's absolute space-time, realized by the cosmic microwave Grandcosmos radiation. The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 and the Atiyah's constant. It is predicted that Koide relation, massive gluons and composite d quark will deblock Particle Physics and that future telescopes will find mature galaxies at very large distances (instead of a dark space), ruining thus the standard evolutionary cosmology, ill-founded on the imperfect cosmological principle.
 
 %% TODO: Insérer axe topologique
 }}\smallskip
