--- a/main.tex
+++ b/main.tex
@@ -924,7 +924,8 @@ $$
 %
 \displaystyle
 F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/a_m^2 \\ \approx a_m (p/p_0) \tau /j \approx a^{1/6}p_K \approx jp/50 \\
-\approx \PI_{par}^{1/20} \approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5} 
+%%\approx \PI_{par}^{1/20}
+\approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5} 
 \end{array}
 $$
 (0.7 ppm, 0.3 \%, 0.1 \%, 0.4  \% and 30 ppb). This shows that Cosmos uses the rationalisation 137/50 for $e$, and that the product $PI_{par}$ of the 6 pariah group orders plays a role. The above Koide constant $p_K \approx 1842.604994$ connects with the above Moonshine Monster dimension [23] $D = 196883$, to 48, 10, 13, 26 ppm:
