--- a/main.tex
+++ b/main.tex
@@ -794,17 +794,22 @@ relations with mathematical constants such as $e$, $\pi$ and $\gamma \approx
 0.577215665$, the Euler-Mascheroni constant, which appears already in the above single-electron
 cosmic radius and the Topological Axis.
 
-\subsection {Grandcosmos shows $e$ as optimal calculation basis}
+\subsection {$e$ is the optimal calculation basis}
     The Topological Axis shows clearly that the Grandcosmos is defined by the following conjunction (1\%):
 \begin{equation}
 f(k = e^{2}) = exp(2^{e^{2+1/2}}) \approx exp(e^{2e}+e^{2})
 \end{equation}
 where the supplementary term $exp(e^2)$ is close to $a^{3/2}$. Note these properies of the 'economic number', to 
-0.4 \%, 6 ppm, 0.4 ppm, 0.04 \%  
-$$e^{e^e}\approx (lnp)^{lnp}          $$
-$$e^{e^e} \approx 137 (e^{e})^3   $$
-$$e^{e^e} \approx e^e a \sqrt{pH} (p/p_0)^2 $$
-$$e^{e^e}\approx j^6/F $$
+0.4 \%, 6 ppm, 0.4 ppm, 0.04, 0.4, 0.2, 0.6 \%:
+$$
+\begin{array}{ll}
+%
+\displaystyle
+e^{e^e}\approx (lnp)^{lnp}  
+\approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5} \approx 137 (e^{e})^3 \approx e^e a \sqrt{pH} (p/p_0)^2 \\
+\approx j^6/F \approx FlnF/2 \approx 2WlnZ \approx Zln(\lambdabar_{CMB}/\lambdabar_e) 
+\end{array}
+$$
 Note that $e^2$ is the limit of the following musical series:
 $$(3/2)^5 \approx (4/3)^7   \approx (5/4)^9  \approx  (6/5)^{11}  \approx   ...  \approx  (1+1/n)^{2n+1}  $$  
 a series converging very much rapidly than the classical Euler's one $(1+1/n)^n$. The first two terms defines the occidental 12 tones scale
@@ -924,11 +929,11 @@ $$
 %
 \displaystyle
 F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/a_m^2 \\ \approx a_m (p/p_0) \tau /j \approx a^{1/6}p_K \approx jp/50 \\
-%%\approx \PI_{par}^{1/20}
+\approx \Pi_{par}^{1/20}
 \approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5} 
 \end{array}
 $$
-(0.7 ppm, 0.3 \%, 0.1 \%, 0.4  \% and 30 ppb). This shows that Cosmos uses the rationalisation 137/50 for $e$, and that the product $PI_{par}$ of the 6 pariah group orders plays a role. The above Koide constant $p_K \approx 1842.604994$ connects with the above Moonshine Monster dimension [23] $D = 196883$, to 48, 10, 13, 26 ppm:
+(0.7 ppm, 0.3 \%, 0.1 \%, 0.4  \% and 30 ppb). This shows that Cosmos uses the rationalisation 137/50 for $e$, and that the product $Pi_{par}$ of the 6 pariah group orders plays a role. The above Koide constant $p_K \approx 1842.604994$ connects with the above Moonshine Monster dimension [23] $D = 196883$, to 48, 10, 13, 26 ppm:
 $$137/8 \approx p^2/D  \approx (p_K/2\pi)^{1/2} \approx 137^{1/\sqrt3} \approx p^{1/\sqrt7}$$ 
 Moreover $\tau$ correlates with the
 term $1+1/\sqrt{a}$, central in quantum electrodynamics to 0.1 ppm:
