--- a/main.tex
+++ b/main.tex
@@ -806,7 +806,7 @@ $$
 %
 \displaystyle
 e^{e^e}\approx (lnp)^{lnp}  
-\approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5} \approx 137 (e^{e})^3 \approx e^e a \sqrt{pH} (p/p_0)^2 \\
+\approx 137 (e^{e})^3 \approx e^e a \sqrt{pH} (p/p_0)^2 \\
 \approx j^6/F \approx FlnF/2 \approx 2WlnZ \approx Zln(\lambdabar_{CMB}/\lambdabar_e) 
 \end{array}
 $$
