--- a/main.tex
+++ b/main.tex
@@ -788,14 +788,16 @@ From the above relation, by taking the $137^{th}$ root, one obtains, to 0.03 \%:
 This proves the close imbrication of the optimal bases.
 
 \section{Fine-tuning with basic mathematical constants}
-\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\textit{Back to Cosmos}}
+\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
+
 Since some dimensionless physical parameters are very precisely measured, we looked for
 relations with mathematical constants such as $e$, $\pi$ and $\gamma \approx
 0.577215665$, the Euler-Mascheroni constant, which appears already in the above single-electron
 cosmic radius and the Topological Axis.
 
 \subsection {$e$ is the optimal calculation basis}
-    The Topological Axis shows clearly that the Grandcosmos is defined by the following conjunction (1\%):
+
+The Topological Axis shows clearly that the Grandcosmos is defined by the following conjunction (1\%):
 \begin{equation}
 f(k = e^{2}) = exp(2^{e^{2+1/2}}) \approx exp(e^{2e}+e^{2})
 \end{equation}
