--- a/main.tex
+++ b/main.tex
@@ -788,7 +788,8 @@ From the above relation, by taking the $137^{th}$ root, one obtains, to 0.03 \%:
 This proves the close imbrication of the optimal bases.
 
 \section{Fine-tuning with basic mathematical constants}
-\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
+%\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
+%\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\textit{Back to Cosmos}}
 
 Since some dimensionless physical parameters are very precisely measured, we looked for
 relations with mathematical constants such as $e$, $\pi$ and $\gamma \approx
