--- a/main.tex
+++ b/main.tex
@@ -784,8 +784,12 @@ Note that $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \a
 $$O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx  n_{ph}/\delta^{1/2} $$
 where $$n_{ph}\approx (3/\pi) exp(e^6/2)$$ (to 0.2 \%) is the photon number in the visible universe. Therefore 496, $p$ and $g_0$ are also privileged computations bases. 
 
-From the above relation, by taking the $137^{th}$ root, one obtains, to 0.03 \%: $$496/j \approx (ae^e/\Gamma)^{1/3}$$
-This proves the close imbrication of the optimal bases.
+From the above relation and Eqs (35) and (38), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $$496/j \approx (ae^e/\Gamma)^{1/3}$$
+Now $ae^e/\Gamma$ is close to $2ed_e$. More precisely (0.7 ppm):
+\begin{equation}
+a/\Gamma = \pi/\gamma \approx 2d_e \times e (p_0/p)^2 
+\end{equation
+Thus, textit {the Atiyah symmetry infers a relation between the three mathematical constants $e$, $\pi$ and $\gamma$ and the Electron magnetic moment $2d_e$. It is remarkable this is obtained from singularities involving the two Monster groups. This introduces the next section.
 
 \section{Fine-tuning with basic mathematical constants}
 %\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
