--- a/main.tex
+++ b/main.tex
@@ -789,7 +789,7 @@ Now $ae^e/\Gamma$ is close to $2ed_e$. More precisely (0.7 ppm):
 \begin{equation}
 a/\Gamma = \pi/\gamma \approx 2d_e \times e (p_0/p)^2 
 \end{equation
-Thus, textit {the Atiyah symmetry infers a relation between the three mathematical constants $e$, $\pi$ and $\gamma$ and the Electron magnetic moment $2d_e$. It is remarkable this is obtained from singularities involving the two Monster groups. This introduces the next section.
+Thus, textit {the Atiyah symmetry infers a relation between the three mathematical constants $e$, $\pi$ and $\gamma$ and the Electron magnetic moment $2d_e$}. It is remarkable this is obtained from singularities involving the two Monster groups. This introduces the next section.
 
 \section{Fine-tuning with basic mathematical constants}
 %\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
