--- a/main.tex
+++ b/main.tex
@@ -788,7 +788,7 @@ From the above relation and Eqs (35) and (38), by taking the $137^{th}$ root, on
 Now $ae^e/\Gamma$ is close to $2ed_e$. More precisely (0.7 ppm):
 \begin{equation}
 a/\Gamma = \pi/\gamma \approx 2d_e \times e (p_0/p)^2 
-\end{equation
+\end{equation}
 Thus, \textit{the Atiyah symmetry infers a relation between the three mathematical constants} $e$, $\pi$ and $\gamma$ and the Electron magnetic moment $2d_e$. It is remarkable this is obtained from singularities involving the two Monster groups. This introduces the next section.
 
 \section{Fine-tuning with basic mathematical constants}
