--- a/main.tex
+++ b/main.tex
@@ -769,7 +769,7 @@ one $a$, the Fermi ratio $F =\sqrt{a_{w}}$ and the strong ratio $f$, to 0.05 \% 
 \begin{equation}
 F/af \approx 496\approx j^{\delta}
 \end{equation}
-Also, to 8 ppm: $$lnO_{M} /2lnlnlnlnO_{M} \approx 137$$ and the product of the 20 groups of the happy family tied
+Also, to 8 ppm: $$\ln(O_{M}) /2\ln\ln\ln\ln(O_{M}) \approx 137$$ and the product of the 20 groups of the happy family tied
 to the Monster shows, to 0.015\%, 1\% and 0.9 \%:
 
 $$\Pi_{happy} \approx \delta \times a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}$$
