--- a/main.tex
+++ b/main.tex
@@ -74,9 +74,9 @@ The antique concept of permanent Cosmos is reintroduced as a perfect determinist
 \markboth{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}{\thepage}
 
 \section{Deterministic Computation and Hierarchy Principle}
-It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
+It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
 
-One can read [1]: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
+One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
 The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed first [2], must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology [3].
 
@@ -1187,7 +1187,7 @@ Submitted on April 1st, 2019 / Accepted on April 6th, 2019
 
 \begin{thebibliography}{99}\footnotesize
 
-\bibitem{1} Carr B.J. and Rees M.J., ``The anthropic principle and the
+\bibitem{Carr} Carr B.J. and Rees M.J., ``The anthropic principle and the
 structure of the physical world'', Nature 278, 605-612 (1979).
 
 \bibitem{2} Eddington A.S. The Fundamental Theory (Cambridge, 1946).
