--- a/main.tex
+++ b/main.tex
@@ -80,7 +80,7 @@ One can read \cite{Carr}: \textit{“For example, the size of a planet is the ge
 
 The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed first [2], must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology [3].
 
-So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. But the forgetting of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe [1].
+So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. But the forgetting of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
 The present article shows that \textit{Physics is a unique part of Mathematics}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and biological parameters, involving main mathematical constants in particle physics: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, these relations confirm the super-string theory but with complete rehabilitation of the tachyonic bosonic string theory.
 
@@ -176,7 +176,7 @@ The appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce [5].
 
-It was noted in [1] that $a_{G}$ is of order $W^{8}$, where $W$ is the mass ratio W boson-
+It was noted in \cite{Carr} that $a_{G}$ is of order $W^{8}$, where $W$ is the mass ratio W boson-
 Electron. With the above $R$ value, one observes the following more symmetrical relation involving
 the other (neutral) weak boson Z, in the 0.01\% indetermination of $W$ and $Z$:
 \begin{equation}
@@ -359,7 +359,7 @@ characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relatio
 \begin{equation}
 t_{K} / t_{e} = (a_{G} a_{w})^{1/2}
 \end{equation}
-The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy 
+The weak coupling constant \cite{Carr} $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy 
 $
 E_{F} \approx 292.806161(6) GeV \approx 573007.33(25) m_{e} c^{2}
 $, itself tied to the weak force constant 
@@ -624,7 +624,7 @@ $S_{5} = 137/60$
 Indeed it appears in the Ptolemaic approximation for $\pi$: $\pi_{Pt} = 377/120 = 2 +  S_{5}/2$.
 
 Recall that the electrical constant $a$ characterizes the force $$F =\hbar c/al^{2}$$ between two l-distant
-elementary charges, where $a$ appears central in Atomic Physics and in many fine-tuning relations [1]. It is
+elementary charges, where $a$ appears central in Atomic Physics and in many fine-tuning relations \cite{Carr}. It is
 misleading that physicists focused on one property only, the appearance of its fifth power in the
 Hydrogen hyper-fine spectra, and call its inverse $\alpha$ the `fine-structure constant`. It is strange also that
 Eddington's Theory was rejected as soon as $a$ appeared to deviate from 137. Indeed, the
@@ -1048,7 +1048,7 @@ astrophysics text-books: the limit of a star radius when the number of atoms red
 This is tied to the application of the exclusion principle that Eddington dared to apply in
 cosmology. For this reason he was declared as a `crakpot` and his theory discarded by a majority.
 Fortunately, the large theoretical advance of Eddington is now recognized [28][29], but without
-mentioning a crucial point: he predicted the tau fermion with a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron [1].
+mentioning a crucial point: he predicted the tau fermion with a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Carr}.
 
 The same rejection seems to apply now to Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least a part of these works is very pertinent.
 
